Edward and Conference

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -269,7 +269,7 @@
   PB_ENG_Focus_Indoctrination:0 "Indoctrinate the Youth"
   PB_ENG_Focus_Indoctrination_desc:0 "The youth are future of Britain and the future businessmen and officers of Empire. However unrest and an era of stagnation has lead many of this future leaders and the young public to lose faith in King and Empire. To deal with this we shall establish new curriculums in schools whilst also using our news service to indoctrinate the youth into their pride of Empire which their forefathers had before them. Long live the Empire."
   PB_ENG_Focus_Edwardian_Restoration:0 "The Edwardian Restoration"
-  PB_ENG_Focus_Edwardian_Restoration_desc:0 "With time and re invigoration of the nation through the Edward's charisma and charm; The King Emperor has decided to restore democracy to the nation with elections occuring soon. King Edward VIII shall forever be known as the man who saved the nation and restored it's sacred right of democracy. God save the King and long may he reign."
+  PB_ENG_Focus_Edwardian_Restoration_desc:0 "With time and re invigoration of the nation through the Edward's charisma and charm; The King Emperor has decided to restore democracy to the nation with elections occuring soon. King Edward VIII shall forever be known as the man who saved the nation and restored it's sacred right of democracy with our guiding hand of course. Only those fit to rule may reign. God save the King and long may we reign."
 
 
   PB_ENG_Path_to_Recovery:0 "Back to the Top"
@@ -929,53 +929,53 @@
 
   britain.20.t:0 "Blood on the Streets"
   britain.20.d:0 "'Police fuck off, Police fuck off' screamed the rioters in London and most likely the protesters all over the country.\n\nAfter the TUC called a General Strike the political situation for Britain went from already bad to worse. Officer Murdoch stood in line with his other police officers facing the rioters; truncheon in hand. To Murdoch's great sadness he was a veteran of the Great war facing the workers of Britain, many of them veterans alongside him forced to face each other due to desperation. Now he stood in line somewhere in the East End near Cable street ready to fight for a goverment which he personally didn't approve of; mainly in part of them failing to pass the National Recovery Act.\n\n'At the ready lads' his superior on horseback shouted to him and his comrades preparing his men for a row. Murdoch noted by now that the rioters were throwing bottles and some even had crow bars ready to break the thin blue line facing them. All of a sudden a battlecry went up and both police and rioters were charging each other into a chaotic melee. All Murdoch could do was watch in disbelief before joining into the frenzy, batton rising and falling as he knocked out rioter one by one."
-  britain.20.a:0 "The Battle of Cable street will forever go down in British history"
+  britain.20.a:0 "The Battle of Cable street will go down in history"
 
   britain.21.t:0 "Bread Riots in London"
-  britain.21.d:0 ""
-  britain.21.a:0 "This is getting a bit too close to home."
+  britain.21.d:0 "Edward looked out the window from Buckingham Palace, watching as his London; capital of Empire and Britain burn. Earlier today Edward was told by his Prime Minister and the Cabinet that Britain had simply ran out of basic goods such as bread due to the dockers rioting and not getting the crucial argo off which. Edward could simply watch as he saw smoke in the distance, the sign of rioting and looting which he so despised.\n\nWhat made matters worse is that Edward was their King, he was the Defender of the Faith and the Realm and here he was simply watching his Kingdom burn. Something had to be done to protect his subjects, a divine task annointed by God himself to Edward. If the Prime Minister could not govern and provide bread to the people, then Edward would make sure he would."
+  britain.21.a:0 "Edward will not let his subjects starve."
 
   britain.22.t:0 "The Military approaches the King"
-  britain.22.d:0 ""
+  britain.22.d:0 "William Robertson strode at a steady pace towards the his King's chamber. As Chief of Imperial Staff he had no right intervening in domestic affairs however the state of Britain, the nation he fought for King and Empire, simply burned away. William was surprised when the King accepted his offer for council instead of his cabinet which showed signs that Edward would act on the current crisis. A good sign for Britain.\n\n'Come in Field Marshall.'\n\nWilliam walked into his King's study and looked at his monarch's face, William could see the worry in his King's face, not one of being overthrown by the working class but concern for his subjects.\n\n'Your Majesty, as your most loyal servant and Field Marshall of your military I can only implore you to dimiss public and establish martial law till the crisis is over.' Robertson said as blunty as possible, the only style he knew and the only style he talked to his late friend King George V.\n\nEdward starred deeply into the eyes of William unnerving the Field Marshall before speaking camly 'see that it is done for the betterment of Britain.'\n\nWilliam could only smile and salute his King before saying God save the King. As he left the room William knew that Edward was the King Britain needed and the only man seem willing to save it."
   britain.22.a:0 "Let's hope it doesn't come to that"
 
   britain.23.t:0 "The Military Storms Parliament"
-  britain.23.d:0 ""
+  britain.23.d:0 "JFC Fuller strode into Parliament alongside Arthur Harris in the Halls of Parliament. Fuller was a veteran of the Great War and the leading thinker in armoured warfare. Fuller lost faith in democracy when the National Recovery Act failed similiar to Air Marshall Harris. Together they walked behind the only man who could unite Britain- King Edward VIII.\n\nEarlier Fuller ordered his troops to storm Parliament and clear the way for the King to dissolve the waste of space called parliament. It was over in then less then five glorious minutes, the King disolved them using his Royal Prerogative and made them bow to him whilst he left, humilating the bastards on the way out.\n\nThe King afterwards spoke to his Troops and onlookers who gathered beforehand wishing to witness what was going on. The speech was short and effective and told the country how the King was fed up with the current Parliament and how he was fed up with them and would replace them with fresh elections once the crisis was over. The Crowd cheered and applauded for the King to Fuller's delight. For the first time since before the Great War, JFC Fuller finally had hope in the British political system before he cried God Save the King which was unanmiously joined in by all onlookers."
   britain.23.a:0 "So this is how Democracy dies..."
 
   britain.24.t:0 "Opening of the 1934 Imperial Conference"
-  britain.24.d:0 ""
-  britain.24.a:0 "Let's Begin"
+  britain.24.d:0 "After the Washington rebellion in America was put down and the establishment of the the Imperial Parliament after the revolt (which soon transformed into the Imperial Federation), Britain has seen it fit to call roughly every four or five years representatives from all Dominions and Mandates to gather and discuss the future of the Empire.\n\nThe 1934 conference will be like no other, with Britain staggering from economic hardships and an ever more assertive American Commonwealth in the Federation's affairs which may topple Britain’s hegemony over Empire. This has naturally made the 34 conference a more fateful decision for Empire instead of a simple checkup that the previous conference's shared. To simplify imperial politics, two leading factions have formed: the Neo Victorians and the Enlighten Imperalists in which the former believes in centralisation of the Empire under Britain and expanding white mandates and the latter believing in a more liberal era of empire to benefit all British subjects, white and black and to also split imperial power throughout the Federation. "
+  britain.24.a:0 "Let's Begin shall we"
 
   britain.25.t:0 "Debates on Dominion Reform"
-  britain.25.d:0 ""
+  britain.25.d:0 "The Question of Dominion reform has come up in the conference. Many natives and the older dominions such as the United Commonwealth believe that due to geographical distance and cultural differences that the mandates should govern with more autonomy and power so that each dominion can deal to their populace certain needs.\n\nThis has naturally caused anger to the old guard of empire and many white colonists in the new territories such as Africa cite that decentralising the Imperial Federation away from Britain will be no different then independence whilst white colonists fear that by giving direct power to the mandates, the governing authorities might favour the natives over the Anglo settlers.Whatever the case it is up to the British Prime Minister to have the final say to dominion reform."
   britain.25.a:0 "The Dominions should more strictly follow the mandates of the Crown"
   britain.25.b:0 "The Dominions should be granted greater autonomy in the Empire"
 
   britain.26.t:0 "Debates on Economic Reform"
-  britain.26.d:0 ""
+  britain.26.d:0 "Naturally Imperial economics and finance came up in the 1934 conference. The Enlighten Imperalists wish for the mandates and Dominions to be self succient and away from the pillaging hands of London so that they can stand on their own two feet for the Empire. The old guard have countered this with the logical point of trade; the Empire was built on trade and by simply throwing away the resources from the colonies needed for the factories in London and the United Commonwealth of America then what's the point of having the Empire in the first place.\n\nThe debate has been quite fierce and only the deciding vote from Britain will finish the result either deciding that the Empire will revolve around Imperial Trade and the City of London or being a more self standing establishment for a co-equal community within Empire."
   britain.26.a:0 "Focus on Centralizing the Economy around London"
   britain.26.b:0 "Decentralize the Economy and Focus on Local Development"
 
   britain.27.t:0 "Debates on the Military"
-  britain.27.d:0 ""
+  britain.27.d:0 "The last topic to come up and most likely the most important due to both old and new threats popping up is the Imperial Federation's stance on the military. Traditionally when war was to break out Britain would raise regiments from all parts of the Empire alongside it's standing army to wage war. However after the Great War and many parts of Empire creating their own standing armies such as the United Commonwealths of America's Royal Army and the Kenyan Security forces.\n\nThe old guard have argued that their should be only be one army which matches with the Federation's motto of 'one nation, one King.' However the Enlighten Imperalists have argued that having each mandate having a specalised military to fit for a certain military role will allow a more efficient and effective fighting force around the globe in defense of Empire.\n\nIt is your choice Prime Minister to decide the matter and the course of Empire with this last debating choice, choose well for the fate of civilisation hangs in the balance."
   britain.27.a:0 "Focus on establishing a centralized Confederal Military"
   britain.27.b:0 "Focus on creating individual Commonwealth militaries"
 
   britain.28.t:0 "End of the Imperial Conference"
-  britain.28.d:0 ""
+  britain.28.d:0 "The 1934 Conference has ended and the Neo-Victorians and the old guard have won the debate of the future of the Empire. To many in Britain, this has secured the Island as the crown and ruler of the Empire whilst many in Africa have began to dispair at the new waves of racial colonisation yet to come from this reinvigoration of Victorian imperial spirit.\n\nThe conference has also been a hot topic in the America, with many loyalists celebrating centralisation of the Empire whilst many who expected a more fair and equal Federation have already began to criticise American subservience to a less populated nation thousands of miles away.\n\nWherever this fans the idea of independence and an inter-empire war can only be decided by fate but for now the Imperial Federation only knows one master and that master is Britain. Long live the Empire and three cheers to the King!"
   britain.28.a:0 "Let us go forwards"
 
   britain.29.t:0 "End of the Imperial Conference"
-  britain.29.d:0 ""
+  britain.29.d:0 "The 1934 Conference has ended with the Enlighten Imperalists coming out on top at the conference. This has caused large shockwaves throughout the Empire as a whole as many British Subjects who are deemed racially inferior to their British rulers now have the chance to be on par with their white brethen in the Federation. To many in Britain this has been nothing more than a capitulation of civilisation to lesser nations whilst others celebrate a new friendship and partnership with the Empire.\n\nWhatever the case, the dominance of the British Isles on the world is starting to wane to a brighter light; a light of hope which can lead glory to the new Enlighten Federation. Only time will tell if this decentralised experiment shall triumph or fall to the winds of change. "
   britain.29.a:0 "Let us go forwards"
 
   britain.30.t:0 "End of the Imperial Conference"
-  britain.30.d:0 ""
+  britain.30.d:0 "The Imperial Conference has ended and neither faction have come out on top of the Imperial debate. The British government is now tasked to single handling picking which side to empower to decide the fate of the Federation, a monumental task and decision which will upset a few people no matter the choice we take. As the old saying goes an omelette requires a few cracked eggs to make.\n\nThe choices are between empowering the Neo Victorians who wish to return to the times of white colonisation and a centralised Imperial Federation or the Enlighten Imperialists who wish to make the Federation equal and fair before all nations and peoples in the Empire. Whatever you pick, the fate of Britain and her dominions as a global power hangs in the balance to your choice."
   britain.30.a:0 "Empower the Neo-Victorians"
   britain.30.b:0 "Empower the Englightened Imperialists"
 
-  britain.31.t:0 "King Edward addresses the Parliament"
+  britain.31.t:0 "King Edward addresses the Nation"
   britain.31.d:0 ""
   britain.31.a:0 "Britannia lives, and marches on!"
 
