Germany Stuff Episode 5
- The Reactionaries Get Content
- Focus Icons
- Localisation
- Event

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -137,7 +137,7 @@
   PB_GER_German_Federation_Proclamation:0 "Proclaim the German Federation"
   PB_GER_Second_Maria_Theresa:0 "The Second Maria Theresa"
 
-  PB_GER_Kaiser_Georg:0 "The Iron Kaiser"
+  PB_GER_Kaiser_Georg:0 "Getting Rid of Elisabeth"
   PB_GER_Constitutionalist_Kaiser:0 "The Constitutional Concessions"
   PB_GER_German_Constitutionalist_Kaiser:0 "A Free Hand"
   PB_GER_New_Chancellor:0 "Kick Stresemann to the Curb"
@@ -155,6 +155,7 @@
   PB_GER_Imperial_Glory:0 "The Glory of Empire"
   PB_GER_German_Empire_Declaration:0 "The Frankfurt Declaration"
   PB_GER_Franz_Joseph_Legacy:0 "The Second Franz Joseph"
+  PB_GER_Chancellor_Kaiser:0 "The Kaiser and the Chancellor"
 
   PB_GER_Develop_Economy:0 "Status of the Economy"
   PB_GER_Balance_Currency_Value:0 "Rebalance the Thaler"
@@ -255,6 +256,9 @@
   PB_GER_Intelligence_Agency_Better_Disguises:0 "Improved Infiltration Plans"
   PB_GER_Intelligence_Agency_Enigma:0 "ENIGMA Programme"
   PB_GER_Intelligence_Agency_Nuclear_Tech:0 "Einstein-Braun Proposal"
+
+  PB_GER_Demands_Danish:0 "Threatening the Danish"
+  PB_GER_Demands_Danish_desc:0 "Threatening the Danish"
 
   ##########################
   # EVENTS
@@ -493,7 +497,11 @@
 
   germany.52.t:0 "Leaving the Philippines - Birth of a Free Nation"
   germany.52.d:0 ""
-  germany.52.a:0 "Believe in Fu"
+  germany.52.a:0 "Believe in the Future, my Friends!"
+  
+  germany.53.t:0 "A Chat with the Kaiserin"
+  germany.53.d:0 ""
+  germany.53.a:0 "For a Free and United Europe"
 
   ##########################
   # DECISIONS
