--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -10,6 +10,11 @@
   PB_Secret_Connections:0 "Secret Connections"
 
   ##########################
+  # TOP BAR
+  ##########################
+  FRA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Conquer Europe and proclaim a new hegemony\n    - The largest tree in Pax Britannica with over 275 focuses\n    - Balance the needs of the Military and SP\n    - Industrialize France's major cities into metropolises\n    - Direct the Pacte Revanchiste towards your ideal Europe\n\n§YSituation:§!\nThe Republic of France is a resurgent continental power in Europe in 1933.\n\n§YLore:§!\nFrance's history is deeply entangled with Europe's history. The liberal constitutionalist reformation followed the §YCrisis of 1798§!, birthing one of Europe's earliest truly parliamentary monarchies. The §YBourbon Dynasty§! once reigned from the shores of Iberia to the swamps of Venezia and beyond, and in their hubris thought to bring down the rising power of Germany. This fatal mistake would ultimately cost the Bourbons their crown, their empire, and lead to the deaths of nearly twenty million people. \n\n §YThe Great War§! ended with the German tricolor flying triumphant over Paris. The humiliating §YTreaty of Tours§! saw the French Empire dismantled, the monarchy formally ended, and a near total demilitarization. Naturally, this so-called Twenty Year Armistice sent France into a sprial of revanchist fervor. In the decades since the end of the war, French politics have become dominated by two main political factions; §YAction Française§! and the §YFrench Popular Front§!. \n\n The former, lead by §YCharles Maurras§!, is a restorationist pro-monarchy party. Technically rendered illegal under the post-war constitution, Maurras' extreme nationalist and Catholic stance have garnered enough support to earn him influence on the National Assembly. The Popular Front, headed by §YJacques Doriot§!, is an ultranationalist authoritarian party seeking revenge against Germany and Britain for their part in the Great War. Forced into a coalition to keep power away from more moderate voices, Doriot and Maurras have begun to increasingly undermine one another in a cynical game for total control. With the left-wing of the Popular Front under §YInessa Armand§! beginning to question Doriot's control, the political scene in France is likely to lead to bloodshed. Regardless of who wins, it seems that the anger of the French people will soon turn East to the moribund German Empire and beyond.\n\n The §YThe Republic of France§! is a §YGreat Power§!"
+
+  ##########################
   # MINISTERS
   ##########################
 
@@ -275,6 +280,54 @@
   French.57.t:0 "New Cities Plan"
   French.57.d:0 ""
   French.57.a:0 "Lets Get To Work Then"
+
+  French.58.t:0 "The Eternal State"
+  French.58.d:0 ""
+  French.58.a:0 "France Will Live For A Thousand Years More"
+
+  French.59.t:0 "Year Zero"
+  French.59.d:0 ""
+  French.59.a:0 "A New France, A New Frenchman"
+
+  French.60.t:0 "Vive la France"
+  French.60.d:0 ""
+  French.60.a:0 "I Wish I Was French"
+
+  French.61.t:0 "Out With The Old"
+  French.61.d:0 ""
+  French.61.a:0 "In With The New"
+
+  French.62.t:0 "Our Saviour"
+  French.62.d:0 ""
+  French.62.a:0 "Our Joan of Arc"
+
+  French.63.t:0 "The Good Old Days"
+  French.63.d:0 ""
+  French.63.a:0 "A King Is What We Needed"
+
+  French.64.t:0 "A French Economy"
+  French.64.d:0 ""
+  French.64.a:0 "Lift Up Your Sleeves And Put Your Backs Into It"
+
+  French.65.t:0 "Rearmament Campaigns"
+  French.65.d:0 ""
+  French.65.a:0 "We Will Not be Embarrassed Again"
+
+  French.66.t:0 "The Autométro"
+  French.66.d:0 ""
+  French.66.a:0 "I Like Trains"
+
+  French.67.t:0 "The Black Spot Of Europe"
+  French.67.d:0 ""
+  French.67.a:0 "They Will Learn To Love Us"
+
+  French.68.t:0 "The Grey Spot Of Europe"
+  French.68.d:0 ""
+  French.68.a:0 "They Will Learn To Love Us"
+
+  French.69.t:0 "Greater France"
+  French.69.d:0 ""
+  French.69.a:0 "Revenge Has Never Tasted Better"
 
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
