added in one more icon

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -183,7 +183,7 @@
   PB_RUS_our_faith_in_tesla_desc:0 ""
   PB_RUS_weapons_of_the_angels:0 "The Weapons of the Angels"
   PB_RUS_weapons_of_the_angels_desc:0 ""
-  PB_RUS_michael_spear:0 "St. Michael's Holy Spear"
+  PB_RUS_michael_spear:0 "St. George's Holy Spear"
   PB_RUS_michael_spear_desc:0 ""
   PB_RUS_power_armoured_titans:0 "Power Armoured Titans"
   PB_RUS_power_armoured_titans_desc:0 ""
