Russia GUI loc and changes

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -47,6 +47,11 @@
   ##########################
   # EVENTS
   ##########################
+
+  ##########################
+  # GUI DESCRIPTIONS
+  ##########################
+  PB_RUS_succession_DESC:0 "§RA crisis looms over the horizon of Russia and Nicholas, its Tsar, knows this.§! It is a crisis over his succession created by nefarious individuals who declare that §GAlexei§! is not the rightful heir after §YNicholas’s§! death. And his death is fast approaching, a fact that is undisputed by anyone. §GThe Black Hundreds§! have been vehemently supportive of §GAlexei§! who wishes to fulfill his father’s plans of Russian supremacy and pan-slavic unity. The §gmoderate nobles§! in the empire support the candidacy of §gGrand Prince Kirill§!, cousin of the Tsar and a proponent of returning russia to its old traditions. The §Oindustrialists, “progressives” and even the growing stranniki cult§! have thrown their lot in with the Tsarina, §OAlexandra§!. The Tsar has very important decisions to make before he dies and it is these decisions and their effects that will decide who rules in the aftermath of his death. §RThe crisis creeps closer and closer.§!"
   
   ##########################
   # FOCUS
