--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -19,6 +19,11 @@
   RUS_Zverev:0 "Arseny Zverev"
   RUS_Fyodorovich:0 "Anatoly Dobrynin"
   RUS_Kosygin:0 "Alexei Kosygin"
+  RUS_Sergei_Trufanov:0 "Sergei Trufanov"
+  RUS_Vladimir_Purishkevich:0 "Vladimir Purishkevich"
+  RUS_Georgy_Katzman:0 "Georgy Katzman"
+  RUS_Nikolai_Markov:0 "Nikolai Markov"
+  RUS_Lavr_Kornilov:0 "Lavr Kornilov"
 
   ##########################
   # IDEAS
