Bug Fixes and GFX Work

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -335,93 +335,11 @@
   PB_ENG_Debate_Military_Policy:0 "Debate Military Policy"
   PB_ENG_Debate_Military_Policy_desc:0 "The British Empire is the mightiest military force ever seen in human history, however many in Imperial Command are split between unifying the different dominion militaries into one single Imperial entity or giving each dominion autonomy in their military affairs. The 1934 congress will put this military split to rest."
 
-  PB_ENG_Neo_Victorianism:0 "New Victorianism"
-  PB_ENG_Neo_Victorianism_desc:0 "The era of Queen Victoria saw the British Empire unchallenged and dominant over the world where London was the center of the world. The Imperial congress has made the decision to revert back to the glory days of old in which many are all ready dubbing 'New Victorianism'."
-  PB_ENG_British_Settlements:0 "A New Life Awaits You in the Colonies!"
-  PB_ENG_British_Settlements_desc:0 "Cecil Rhodes, Thomas Raffles and many other Englishmen from across the globe have secured wealth and new living space for Britain and her citizens. Join them and many other pioneers civilizing all four corners of the globe in the name of crown and Britannia."
-  PB_ENG_Integrate_the_Economies:0 "Propose the Sterling Zone"
-  PB_ENG_Integrate_the_Economies_desc:0 "The Bank of England shall implement the Sterling zone across the dependencies currently under our control and propose to the Commonwealth realms and our colonies a single unified currency under the pound sterling which will grant more fluid trade transactions and economic benefits across the empire."
-  PB_ENG_White_Mans_Burden:0 "The White Man's Burden"
-  PB_ENG_White_Mans_Burden_desc:0 "Joseph Chamberlain has quoted that the Anglo white man is the greatest race to ever inhabit God's earth and that it is the duty of the white man to inhabit and develop the world so that the Anglo can oversee over the savages of the world and to make sure that Britain graces every corner of the world wherever they like it or not."
-  PB_ENG_African_Tourism:0 "Tourism in the Dark Continent"
-  PB_ENG_African_Tourism_desc:0 "By promoting tourism in Africa from the jungles of Nigeria to the plains of East Africa, we can bring money into the African colonies allowing us to gain a new source of revnue whilst also enticing many American and British citizens to possibly start a new life in the dark continent"
-  PB_ENG_Federalist_Idea:0 "Promote Federalism"
-  PB_ENG_Federalist_Idea_desc:0 "By supporting parties believing in the federalisation of the British Empire across our many colonies we can bring down the barriers of nationalism across the many Commonwealth realms and to remind the empire who rules the world."
-  PB_ENG_Reorganize_West_Africa:0 "Reorganize the West African Departments"
-  PB_ENG_Reorganize_West_Africa_desc:0 "By taking over the oldest colonies from the British African Authority we can begin the colonisation of these colonies with new white families and to begin the intergration process of these colonies into the United Kingdom to become official parts of the union."
-  PB_ENG_Break_down_Imperial_Barriers:0 "Encourage Intra-Empire Immigration"
-  PB_ENG_Break_down_Imperial_Barriers_desc:0 "By encouraging citizens from all over the British Empire and the Commonwealth we can increase our economic activity across the world whilst also breaking down the nationality of these citizens and to make them reveal to them that they are all British subjects in nature."
-  PB_ENG_Security_Forces:0 "Expand the Imperial Security Forces"
-  PB_ENG_Security_Forces_desc:0 "By expanding the Imperial Security Forces an organisation which keeps the peace in the colonies (also known as the ISF) in our colonies; we can make sure that any native resitance against the cogs of civilization are crushed whilst also consolidating compliance from their local rulers."
-  PB_ENG_Imperial_Federalism_Retained:0 "A Federalized Empire"
-  PB_ENG_Imperial_Federalism_Retained_desc:0 "The British Empire has been Federalized, from America to Victoria the Empire knows only one master and that master is the United Kingdom of Great Britain and Ireland. London has essentially become the cultural and political center of the world, none shall dare challenge the British Empire! Rule Britannia!"
+  PB_ENG_Focus_on_North_America:0 "Our Wayward Sons in America"
 
-  PB_ENG_Fortify_the_Suez:0 "Fortify the Suez"
-  PB_ENG_Fortify_the_Suez_desc:0 "The Suez Canal is quite possibly the Achilles heel of the British Empire, most of the empires trade passes through the Suez including the raw materials for Britain, if this vital trade link is ever to fall the consequences would be limitless, we must fortify the canal to make sure we will never be crippled by it's loss."
-  PB_ENG_Fortify_Gibraltar:0 "Fortify the Rock"
-  PB_ENG_Fortify_Gibraltar_desc:0 "Gibraltar is the entrance to the Mediterranean and the shipping lanes of the Suez, a crucial point in the British imperial project if Gibraltar was to ever fall the royal navy would not be able to protect the vital supplies shipping from the Suez and cause a collapse of imperial trade, we shall fortify the rock to make sure this scenario never occurs."
-  PB_ENG_Fortify_Singapore:0 "Fortify Singapore"
-  PB_ENG_Fortify_Singapore_desc:0 "Singapore is the Gibraltar of the oriental, millions of pound worth of trade passes infront of this paradise city whilst also projecting British interests in the region. To make sure this mandate never falls we shall garrison and fortify the region to protect Singapore from any hostile forces."
-  PB_ENG_Imperial_Assistance_Focus:0 "Imperial Mutual Assistance Plan"
-  PB_ENG_Imperial_Assistance_Focus_desc:0 "Many key men in the Commonwealth have called for the empire as a whole to begin to fund poorer regions in the empire to allow economic growth in these areas to hit the same standard as London or Philadelphia. Many are in support for this idea which has been fittingly called the Imperial Mutal Assitance Plan."
-  PB_ENG_Imperial_Military_Focus:0 "Standardize the Imperial High Command"
-  PB_ENG_Imperial_Military_Focus_desc:0 "Many in imperial high command have called for the standardization of all the Commonwealth and Colony armies in the empire including the top brass in high command. This will the Empire as a whole to reduce logistical and bureaucratic restrictions between the many different militaries in the empire allowing for a more effective imperial army."
-  PB_ENG_Imperial_Investment_Focus:0 "Imperial Investments Committee"
-  PB_ENG_Imperial_Investment_Focus_desc:0 "Many businessmen and pioneers have called for Westminister to allow them and government institutions to invest into new resources of the colonies from the icy shores of Canada to the mines of East Africa. This investment committee will bring new resources to the table whilst also providing job security to many settlers and natives in the Commonwealth."
+  PB_ENG_Focus_on_Africa:0 "Our Loyal Subjects in the Dark Continent"
 
-  PB_ENG_Englightened_Imperialism:0 "Enlightened Imperialism"
-  PB_ENG_Englightened_Imperialism_desc:0 "The Congress has voted and a new path of the empire has been paved. An empire which shall now spread its wings not through conquest and bloodshed but through co-operation and fellowship with the world, gone are the days of barbaric conquest and now are the days of Enlightened Imperialisim, God save the Commonwealth and all her realms."
-  PB_ENG_Mission_to_Civilize:0 "Mission to Civilize"
-  PB_ENG_Mission_to_Civilize_desc:0 "Our goal in our colonies are not to conquer and enslave but to liberate and show the way to those who still live in ancient times, to show them a new world of European medicine and to help build a new society for those who are stuck in a bygone era. We are on our mission to civilize the globe and we shall not stop till are children of Britannia."
-  PB_ENG_Colonial_Suffrage:0 "End the Colonial Segregation Laws"
-  PB_ENG_Colonial_Suffrage_desc:0 "The Emprie loves all it's children even if they're black, white or yellow for they are all welcome in our great society however many of our own institutions and our fellow associates in the Commonwealth have many laws segregating white from 'savage'. With a new era of thinking we shall implement new laws to all in the federation to officially desegregate the Commonwealth."
-  PB_ENG_Imperial_Partnership:0 "Partners, Not Superiors"
-  PB_ENG_Imperial_Partnership_desc:0 "The many nations of the Commonwealth fought hard in the Great war and paid the price for protecting the project known as the British Empire. We must realise that these nations are not beneath us but are fellow comrades in arms in times of war and peace. From now on we are Partners, Not Superiors."
-  PB_ENG_New_Autonomies:0 "Establish New Commonwealths"
-  PB_ENG_New_Autonomies_desc:0 "With growing nationalism across the empire and new threats to our great Commonwealth slowly forming, we shall create new realms in the federation to lessen the load on the British economy whilst also creating new partners to help us in the dark times ahead."
-  PB_ENG_Starship_Troopers:0 "Service Guarantees Citizenship"
-  PB_ENG_Starship_Troopers_desc:0 "Many colonial subjects serve in the colonial army for Britain yet when there service is over we throw them in the dirt like they are scum.We must rectify this cruelty and grant them full British citizenship and benefits to thank them for there service to the crown."
-  PB_ENG_Confederation_Dream:0 "Loyalty to an Idea, Not a Nation"
-  PB_ENG_Confederation_Dream_desc:0 "The empire is so diverse that one naturally feels loyal to their local nation and community. To deal with this the Imperial Broadcasting Service shall start broadcasting that all citizens should be loyal to the crown and the shared British values we hold all across the Commonwealth."
-  PB_ENG_New_Colossus:0 "Anglotropicalism"
-  PB_ENG_New_Colossus_desc:0 "The Anglo race has settled all over the globe from America to Asia, our secret to our success must be our culture. The Anglo culture must be designed for settling the world, by encouraging this idea to our people to settle areas on the colonial frontier we can create a truly global Anglo race."
-  PB_ENG_Tired_Poor:0 "Multicultural Imperialism"
-  PB_ENG_Tired_Poor_desc:0 "Our culture spreads far and wide from the Chinese in Hong Kong to our loyal Sarawakian allies who both share the identity of the British culture, one does not require to be white and English to spread the influence of the crown all over the globe. Instead we can all contribute to the expansion of imperial culture across the world."
-  PB_ENG_Federation_of_Nations:0 "A Confederation of Nations"
-  PB_ENG_Federation_of_Nations_desc:0 "The Prime Minister has called the British Empire as an entity with nations cooperating inside of it. Now this dream has been realised with shared imperial values across the federation. We are no longer master and servant but instead one people united under one crown. Our new creed shall be 'One People, One Destiny.'"
-
-  PB_ENG_Foreign_Policy:0 "The Lion Wakes"
-  PB_ENG_Foreign_Policy_desc:0 "The British Lion has been sleeping for decades, satisfied that it's current strength has crowned it ruler of the jungle however decades of revanchism and hatred by the Lion's old foes has awaken the British Lion from it's slumber for one more challenge for the rulership of the world."
-  PB_ENG_Denounce_Neutrality:0 "Denounce Neutrality"
-  PB_ENG_Denounce_Neutrality_desc:0 "First thing first; we must make sure that our government and the opposition denounce the status quo in which this country has been fellowing since the last war to stir up a new wave of patriotic fever."
-  PB_ENG_Fight_Pacifism:0 "Attack the Pacifists"
-  PB_ENG_Fight_Pacifism_desc:0 "The generation which birthed from the veterans of the Great War has spawned a new consensus of pacifism nationwide. Ignorant of their parents sacrifice in the last war we must gather our nation's finest to attack these cowards and break their excuse for not fighting for King and Country."
-  PB_ENG_Revive_the_White_Feathers:0 "Revive the White Feather Society"
-  PB_ENG_Revive_the_White_Feathers_desc:0 "The White Feather Society was a society which targetted the minority who allowed others to fight for their stead even if they were fighting fit. By restoring this society we can make sure that these cowards who allowed others to die will join their brothers in arm for service to the British Empire."
-  PB_ENG_Denounce_Red_Pacifists:0 "Denounce the Red Cowards"
-  PB_ENG_Denounce_Red_Pacifists_desc:0 "The working class man in Britain is normally willing to fight for their freedoms, their King and also their country, however a minority of these men infiltrated by republicans and pacifists which have joined the pacifist cause. By working with the Workers Union party we can denounce this movement and prevent this movement from getting out of hand."
-  PB_ENG_Alliance_With_the_Right:0 "Promote Nationalism"
-  PB_ENG_Alliance_With_the_Right_desc:0 "The United Kingdom is greatest country to ever set foot upon God's earth. By working with the nationalists we can promote a sense of patriotic duty towards England the British Empire allowing us tap into a new source of recruits even if that might mean working with the nationalists." 
-  PB_ENG_National_Propaganda_Campaign:0 "National Propaganda Campaign"
-  PB_ENG_National_Propaganda_Campaign_desc:0 "By working with British Pathé news, we can promote a propaganda campaign to rally England's lions to the Union Jack to defend our values and our Empire from any adversary which might cross our path."
-  PB_ENG_Anti_French_Revanchism:0 "Anti-French Revanchism"
-  PB_ENG_Anti_French_Revanchism_desc:0 "'The French dogs are once again challenging our god given might lads, remember lads those Frenchie's have been at war with us for as long as English history can remember from the Seven years war to the Great war but we won time and time again and now those wankers are spoiling for another fight. Now lads we got a job to do so let's give those French dogs a kickin'"
-  PB_ENG_Wrangle_Local_Leaders:0 "Wrangle Local Leaders"
-  PB_ENG_Wrangle_Local_Leaders_desc:0 "Britain even though an island is still a very large place with towns and villages all over the land where large parts of the population live. However these town councils and mayors have influence where the central government cannot reach in their local authorities. By making sure these areas are loyal to we can gain the recruits and support Britannia needs to win this new war."
-  PB_ENG_Unite_the_Government:0 "Unite the Government on Rearmament"
-  PB_ENG_Unite_the_Government_desc:0 "The British government and opposition must unite and pass acts and laws to start the rearmament of the nation to brace ourselves for the coming conflict."
-  PB_ENG_Renewed_War_Support:0 "Renewed Militarism"
-  PB_ENG_Renewed_War_Support_desc:0 "Britannia called and her citizens have mustered. So let us therefore brace ourselves to our duties, and so bear ourselves, that if the British Empire and its Commonwealth last for a thousand years, men will still say, 'This was their finest hour.'"
-  PB_ENG_Strike_Abyssinia:0 "Put Down the Abyssinian Lion"
-  PB_ENG_Strike_Abyssinia_desc:0 "Abyssinia is one of the few uncivilised African nations to survive the European onslaught in Africa, however with a new war on the horizon we must put down this lion to make sure our grip on East Africa is secured."
-  PB_ENG_Middle_East_Expansion:0 "Expedition into Arabia"
-  PB_ENG_Middle_East_Expansion_desc:0 "The land of Arabs even though free from their Turk overlords remain divided and rich for the taking. With rumours of oil being found in Arabia we will happily send an expedition into Arabia to civilise the region, in the name of civilisation of course."
-  PB_ENG_Demand_Iranian_Coast:0 "Enforce Claims on the Persian Gulf"
-  PB_ENG_Demand_Iranian_Coast_desc:0 "With much of our oil supply shipping out of the trucial states through the Persian Gulf we will send a demand to Tehran demanding for their coastlines to be handed over to us to secure our oil interests or face the wrath of the British Empire."
-  PB_ENG_Middle_East_Expansion_2:0 "Consolidate Northern Arabia"
-  PB_ENG_Middle_East_Expansion_2_desc:0 "Northern Arabia, a vast desert uncivilised and sparsely populated must be taken by force to consolidate our grip on the Middle East."
-  PB_ENG_Middle_East_Expansion_3:0 "Complete Control of the Gulf"
-  PB_ENG_Middle_East_Expansion_3_desc:0 "We must finish our consolidation of the Arab world by eradicating whatever states have survived our initial onslaught in the Middle East. For King, Country and the black gold which inhabits this corner of the earth advance soldiers of Britannia!"
+  PB_ENG_Focus_on_Asia:0 "Our Committment to the Far East"
 
   PB_ENG_King_Death:0 "The Death of the King"
   PB_ENG_King_Death_desc:0 "After suffering illness after illness, King George V slept peacefully at midnight, and with it, a new dawn shall arise. Eventually, King Edward VIII shall assume the throne, although the future of the empire remains uncertain, as our nation is facing a paradigm shift never before seen in the British Isles."
