all french ministers are in

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -17,18 +17,37 @@
   ##########################
   # MINISTERS
   ##########################
+  #DORIOT
   FRA_PB_victor_barthelemy:0 "Victor Barthélemy"
   FRA_PB_robert_brasillach_FM:0 "Robert Brasillach"
   FRA_PB_andre_grisoni_EM:0 "André Grisoni"
   FRA_PB_pierre_pucheu_IM:0 "Pierre Pucheu"
   FRA_PB_robert_vigan:0 "Robert Le Vigan"
+  #MUARRAS
   FRA_PB_raphael_alibert:0 "Raphaël Alibert"
   FRA_PB_leon_daudet_EM:0 "Léon Daudet" 
   FRA_PB_hugues_panassie_FM:0 "Hugues Panassié"
-  FRA_PB_xavier_vallat_IM:0 "Xavier Vallat"
+  FRA_PB_georges_valois_IM:0 "Georges Valois"
   FRA_PB_maurice_pujo:0 "Maurice Pujo"
+  #ARMAND
   FRA_PB_hubert_lagardelle:0 "Hubert Lagardelle"
   FRA_PB_adrien_marquet_EM:0 "Adrien Marquet"
+  FRA_PB_henri_barbe_FM:0 "Henri Barbé"
+  FRA_PB_hubert_lagardelle_IM:0 "Hubert Lagardelle"
+  FRA_PB_simone_beauvoir:0 "Simone de Beauvoir"
+  #MILITARY 
+  FRA_PB_edgar_puaud:0 "Edgar Puaud"
+  FRA_PB_armand_pinsard_em:0 "Armand Pinsard"
+  FRA_PB_jacques_correze_FM:0 "Jacques Corrèze"
+  FRA_PB_francois_darlan_IM:0 "Francois Darlan"
+  FRA_PB_philippe_petain:0 "Philippe Pétain"
+  #SP
+  FRA_PB_henri_fenet:0 "Henri Joseph Fenet"
+  FRA_PB_leon_gaultier_em:0 "Léon Gaultier"
+  FRA_PB_rene_binet_fm:0 "René Binet"
+  FRA_PB_eugene_vaulot_IM:0 "Eugène Vaulot"
+  FRA_PB_jean_paquis:0 "Jean Hérold-Paquis"
+
 
   ##########################
   # EVENTS
